--- a/index.html
+++ b/index.html
@@ -85,20 +85,19 @@
     --poster-color: transparent;
   }
 
-  /* COMPARE MODE (OVERLAY) */
+  /* COMPARE MODE */
   #compare-wrapper{
-    display:none; /* show when comparing */
+    display:none;
     position:fixed;
     left:var(--sidebar-width);
     top:0;
     width:calc(100vw - var(--sidebar-width));
     height:100vh;
-    background:white; /* requested white background */
+    background:white;
     z-index:1000;
     overflow:hidden;
   }
 
-  /* Back button top-left inside compare */
   #compare-back {
     position:absolute;
     top:16px;
@@ -112,7 +111,6 @@
     cursor:pointer;
   }
 
-  /* left/right selection lists (centered vertically) */
   .side-list {
     position:absolute;
     top:50%;
@@ -120,7 +118,7 @@
     display:flex;
     flex-direction:column;
     gap:10px;
-    z-index:2000; /* above viewers so clickable */
+    z-index:2000;
     width:160px;
   }
   #left-list { left:20px; }
@@ -134,31 +132,26 @@
     border-radius:6px;
     cursor:pointer;
   }
-  .side-list button:hover{ background:#444; }
 
-  /* container that holds the two viewers stacked */
   #compare-container{
     position:absolute;
     inset:0;
     overflow:hidden;
   }
 
-  /* both model-viewers cover full compare-container */
   model-viewer.compare-model {
     position:absolute;
     inset:0;
     width:100%;
     height:100%;
     --poster-color: transparent;
-    /* allow user interaction (pointer) */
     pointer-events:auto;
   }
 
-  /* initial clipping: left shows left half, right shows right half */
-  #model-left { clip-path: inset(0 50% 0 0); }
+  /* Initial half clipping */
+  #model-left  { clip-path: inset(0 50% 0 0); }
   #model-right { clip-path: inset(0 0 0 50%); }
 
-  /* slider (vertical) centered */
   #compare-slider {
     position:absolute;
     top:0;
@@ -172,7 +165,6 @@
     border-radius:3px;
   }
 
-  /* hide model-viewer default UI parts that show interaction badges */
   model-viewer::part(default-controls){
     display:none !important;
   }
@@ -184,50 +176,34 @@
   <div id="sidebar">
     <h2>Modelle</h2>
     <div id="year-list"></div>
-
     <button id="compare-btn">Vergleichen</button>
   </div>
 
-  <!-- Main area -->
+  <!-- Main Model -->
   <div id="main-area">
     <model-viewer id="main-model"
       camera-controls
-      interaction-prompt="none"
-      interaction-prompt-threshold="0"
-      alt="Hauptmodell">
+      interaction-prompt="none">
     </model-viewer>
   </div>
 
-  <!-- Compare overlay -->
-  <div id="compare-wrapper" aria-hidden="true">
+  <!-- Compare Mode -->
+  <div id="compare-wrapper">
     <button id="compare-back">← Zurück</button>
 
     <div id="left-list" class="side-list"></div>
     <div id="right-list" class="side-list"></div>
 
     <div id="compare-container">
-      <model-viewer id="model-left" class="compare-model"
-        camera-controls
-        interaction-prompt="none"
-        interaction-prompt-threshold="0"
-        alt="linkes Modell">
-      </model-viewer>
-
-      <model-viewer id="model-right" class="compare-model"
-        camera-controls
-        interaction-prompt="none"
-        interaction-prompt-threshold="0"
-        alt="rechtes Modell">
-      </model-viewer>
+      <model-viewer id="model-left" class="compare-model" camera-controls></model-viewer>
+      <model-viewer id="model-right" class="compare-model" camera-controls></model-viewer>
     </div>
 
-    <div id="compare-slider" role="separator" aria-orientation="vertical"></div>
+    <div id="compare-slider"></div>
   </div>
 
 <script>
-/* ===========================
-   Models (use your filenames)
-   =========================== */
+/* Models */
 const MODEL_LIST = [
   "1150.glb",
   "1175.glb",
@@ -237,185 +213,115 @@ const MODEL_LIST = [
   "1936.glb"
 ];
 
-/* ---------- Populate sidebar years ---------- */
-const yearList = document.getElementById('year-list');
+/* Fill year buttons */
+const yearList = document.getElementById("year-list");
 MODEL_LIST.forEach(fn => {
-  const name = fn.replace(/\.glb$/i, '');
-  const b = document.createElement('button');
-  b.className = 'year-btn';
-  b.textContent = name;
-  b.onclick = () => {
-    document.getElementById('main-model').src = fn;
-  };
+  const b = document.createElement("button");
+  b.className = "year-btn";
+  b.textContent = fn.replace(".glb", "");
+  b.onclick = () => mainModel.src = fn;
   yearList.appendChild(b);
 });
 
-/* show first model immediately */
-document.getElementById('main-model').src = MODEL_LIST[0];
+const mainModel = document.getElementById("main-model");
+mainModel.src = MODEL_LIST[0];
 
-/* ---------- compare elements ---------- */
-const compareBtn = document.getElementById('compare-btn');
-const compareWrapper = document.getElementById('compare-wrapper');
-const compareBack = document.getElementById('compare-back');
-const leftList = document.getElementById('left-list');
-const rightList = document.getElementById('right-list');
-const modelLeft = document.getElementById('model-left');
-const modelRight = document.getElementById('model-right');
-const slider = document.getElementById('compare-slider');
-const compareContainer = document.getElementById('compare-container');
+/* Compare elements */
+const modelLeft = document.getElementById("model-left");
+const modelRight = document.getElementById("model-right");
+const slider = document.getElementById("compare-slider");
+const compareWrapper = document.getElementById("compare-wrapper");
+const compareContainer = document.getElementById("compare-container");
 
-/* Fill left/right lists with year buttons (centered vertically by CSS) */
+/* Build compare lists */
 function buildCompareLists() {
-  leftList.innerHTML = '';
-  rightList.innerHTML = '';
+  leftList.innerHTML = "";
+  rightList.innerHTML = "";
   MODEL_LIST.forEach(fn => {
-    const name = fn.replace(/\.glb$/i, '');
-    const bl = document.createElement('button');
+    const name = fn.replace(".glb", "");
+    const bl = document.createElement("button");
     bl.textContent = name;
-    bl.onclick = () => { modelLeft.src = fn; };
+    bl.onclick = () => modelLeft.src = fn;
     leftList.appendChild(bl);
 
-    const br = document.createElement('button');
+    const br = document.createElement("button");
     br.textContent = name;
-    br.onclick = () => { modelRight.src = fn; };
+    br.onclick = () => modelRight.src = fn;
     rightList.appendChild(br);
   });
 }
 
-/* ---------- open/close compare mode ---------- */
-compareBtn.addEventListener('click', () => {
-  // set compare visible
-  compareWrapper.style.display = 'block';
-  compareWrapper.setAttribute('aria-hidden', 'false');
-
-  // populate lists
+compareBtn.onclick = () => {
+  compareWrapper.style.display = "block";
   buildCompareLists();
-
-  // set default models (left=first, right=last) if not set
   if (!modelLeft.src) modelLeft.src = MODEL_LIST[0];
-  if (!modelRight.src) modelRight.src = MODEL_LIST[MODEL_LIST.length - 1];
+  if (!modelRight.src) modelRight.src = MODEL_LIST[1];
+};
 
-  // position slider centered
-  requestAnimationFrame(() => {
-    positionSliderAtPercent(0.5);
-  });
-});
+/* BACK button */
+compareBack.onclick = () => {
+  compareWrapper.style.display = "none";
+};
 
-compareBack.addEventListener('click', () => {
-  compareWrapper.style.display = 'none';
-  compareWrapper.setAttribute('aria-hidden', 'true');
-});
-
-/* ---------- calculate and set clip-paths relative to compare container ---------- */
-function positionSliderAtPercent(pct) {
-  // pct between 0..1 relative to compare-container width
+/* Slider logic */
+function updateClip(x) {
   const rect = compareContainer.getBoundingClientRect();
   const width = rect.width;
-  const x = Math.min(Math.max(pct, 0.02), 0.98) * width;
 
-  // place slider (absolute left from compare-wrapper)
-  const wrapperRect = compareWrapper.getBoundingClientRect();
-  const leftOffset = rect.left - wrapperRect.left; // usually 0
-  slider.style.left = (leftOffset + x) + 'px';
+  const pos = Math.min(Math.max(x - rect.left, 0), width);
 
-  // compute clip for left (hide right side from x..end)
-  modelLeft.style.clipPath = `inset(0 ${Math.round(width - x)}px 0 0)`;
-  // compute clip for right (hide left side up to x)
-  modelRight.style.clipPath = `inset(0 0 0 ${Math.round(x)}px)`;
+  slider.style.left = pos + "px";
+
+  modelLeft.style.clipPath  = `inset(0 ${width - pos}px 0 0)`;
+  modelRight.style.clipPath = `inset(0 0 0 ${pos}px)`;
 }
 
-/* ---------- MAKE SLIDER DRAGGABLE (mouse + touch) ---------- */
-let dragging = false;
+slider.onmousedown = e => {
+  const move = ev => updateClip(ev.clientX);
+  const up = () => {
+    window.removeEventListener("mousemove", move);
+    window.removeEventListener("mouseup", up);
+  };
+  window.addEventListener("mousemove", move);
+  window.addEventListener("mouseup", up);
+};
 
-slider.addEventListener('mousedown', (ev) => {
-  ev.preventDefault();
-  dragging = true;
-});
-window.addEventListener('mouseup', () => dragging = false);
-window.addEventListener('mouseleave', () => dragging = false);
-
-window.addEventListener('mousemove', (ev) => {
-  if (!dragging) return;
-  updateSliderFromClientX(ev.clientX);
-});
-
-// Touch support
-slider.addEventListener('touchstart', (ev) => { ev.preventDefault(); dragging = true; });
-window.addEventListener('touchend', () => dragging = false);
-window.addEventListener('touchcancel', () => dragging = false);
-window.addEventListener('touchmove', (ev) => {
-  if (!dragging) return;
-  updateSliderFromClientX(ev.touches[0].clientX);
-});
-
-function updateSliderFromClientX(clientX) {
-  const rect = compareContainer.getBoundingClientRect();
-  // clamp to container
-  const leftBoundary = rect.left + 20; // small padding
-  const rightBoundary = rect.right - 20;
-  const clampedX = Math.min(Math.max(clientX, leftBoundary), rightBoundary);
-  const pct = (clampedX - rect.left) / rect.width;
-  positionSliderAtPercent(pct);
-}
-
-/* ---------- camera sync (bidirectional, without loop) ---------- */
+/* Camera sync */
+let lockedModel = null;
 let syncing = false;
 
-function syncCamera(source, target) {
+function syncCam(a, b) {
   if (syncing) return;
   syncing = true;
-  try {
-    // model-viewer exposes cameraOrbit, cameraTarget and fieldOfView properties
-    target.cameraOrbit = source.cameraOrbit;
-    target.cameraTarget = source.cameraTarget;
-    target.fieldOfView = source.fieldOfView;
-  } catch (e) {
-    // ignore if not ready yet
-  } finally {
-    // tiny delay to avoid recursive loop issues
-    setTimeout(() => { syncing = false; }, 0);
-  }
+  b.cameraOrbit = a.cameraOrbit;
+  b.cameraTarget = a.cameraTarget;
+  b.fieldOfView = a.fieldOfView;
+  setTimeout(() => syncing = false, 0);
 }
 
-modelLeft.addEventListener('camera-change', () => syncCamera(modelLeft, modelRight));
-modelRight.addEventListener('camera-change', () => syncCamera(modelRight, modelLeft));
-
-/* Ensure nothing auto-rotates or auto-animates on load:
-   We do not set auto-rotate attributes anywhere, and interaction prompt removed via attributes and CSS.
-   Optionally set a fixed initial cameraOrbit for both to avoid initial movement: */
-function setInitialOrbits() {
-  // choose a comfortable starting orbit (azimuth elevation radius). Adjust if needed.
-  // format: "<azimuth>deg <elevation>deg <radius>"
-  const initial = '0deg 75deg 2.5m';
-  try {
-    modelLeft.cameraOrbit = initial;
-    modelRight.cameraOrbit = initial;
-    modelLeft.cameraTarget = '0m 0m 0m';
-    modelRight.cameraTarget = '0m 0m 0m';
-  } catch (e) {}
+/* Detect which model user is controlling */
+function setActive(model) {
+  lockedModel = model;
 }
 
-// set initial orbits once viewers are ready
-modelLeft.addEventListener('load', setInitialOrbits);
-modelRight.addEventListener('load', setInitialOrbits);
-
-/* Make sure clicks on side buttons are above model viewers (z-index already set in CSS).
-   Also ensure keyboard ESC closes compare mode */
-window.addEventListener('keydown', (e) => {
-  if (e.key === 'Escape' && compareWrapper.style.display === 'block') {
-    compareWrapper.style.display = 'none';
-  }
+["mousedown","touchstart"].forEach(evt=>{
+  modelLeft.addEventListener(evt,()=>setActive(modelLeft));
+  modelRight.addEventListener(evt,()=>setActive(modelRight));
 });
 
-/* On window resize keep slider centered relative to new size */
-window.addEventListener('resize', () => {
-  // keep same visual center by recalculating based on current slider left
+/* Sync from active model */
+modelLeft.addEventListener("camera-change",()=>{
+  if (lockedModel===modelLeft) syncCam(modelLeft,modelRight);
+});
+modelRight.addEventListener("camera-change",()=>{
+  if (lockedModel===modelRight) syncCam(modelRight,modelLeft);
+});
+
+/* Initial center slider */
+window.onload = () => {
   const rect = compareContainer.getBoundingClientRect();
-  const sliderRect = slider.getBoundingClientRect();
-  const x = sliderRect.left - rect.left;
-  const pct = rect.width ? (x / rect.width) : 0.5;
-  positionSliderAtPercent(pct);
-});
+  updateClip(rect.width/2);
+};
 </script>
 </body>
 </html>
